--- a/src/styles.css
+++ b/src/styles.css
@@ -16,7 +16,7 @@ h1 {
 }
 
 .card {
-  width: 450px;
+  width: 550px;
   margin: 40px;
   border: 4px solid #222;
 }
@@ -34,6 +34,7 @@ h1 {
 .data {
   padding: 32px;
   padding-top: 24px;
+  
 }
 
 .skill-list {
@@ -42,6 +43,8 @@ h1 {
   flex-wrap: wrap;
   gap: 8px;
   margin-top: 16px;
+  border: 5px solid #1cd356;
+  padding:20px;
 }
 
 .skill {
